# lrclibfetch

./: Cargo.toml  README.md
src/: api.rs  args.rs  main.rs  metadata.rs  processor.rs  scanner.rs
