[package]
name = "lrclibfetch"
version = "1.0.1"
edition = "2024"
authors = ["Aethar <elliott.ashby8@gmail.com>"]
description= "A cli for LRCLIB."
license = "MIT"
repository = "https://github.com/Aethar/lrclibfetch"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lofty = "0.21"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
